# akolyte

./: .clang-format  .gitignore  .gitmodules  Dockerfile  README.md  recipe.py
cad/: .gitignore
cad/freecad/: assembly.FCStd  plate.FCStd  top.FCStd
cad/freecad/components/: gateron.FCStd  keycap.FCStd  pcb_left.FCStd  rp.FCStd  usb-plug.FCStd
cad/kicad/pcb_left/: controler.kicad_sch  pcb_left.kicad_pcb  pcb_left.kicad_pro  pcb_left.kicad_sch
cad/kicad/pcb_right/: controler.kicad_sch  pcb_right.kicad_pcb  pcb_right.kicad_pro  pcb_right.kicad_sch
firmware/: .gitignore  CMakeLists.txt  README.md
firmware/akolyte/: CMakeLists.txt
firmware/akolyte/inc/akolyte/: core1.hpp  defs.hpp  flow_selector.hpp  i2c_worker.hpp  keycodes.hpp  logger.hpp  usb_manager.hpp
firmware/akolyte/src/: core1.cpp  flow_selector.cpp  i2c_worker.cpp  logger.cpp  main.cpp  usb_manager.cpp
firmware/drivers/i2c/: CMakeLists.txt
firmware/drivers/i2c/inc/: pico_i2c_driver.h
firmware/drivers/i2c/inc/i2c/: i2c_driver.h
firmware/drivers/i2c/src/: i2c_driver.cpp  pico_i2c_driver.cpp
firmware/drivers/pico/i2c/inc/: pico_i2c_driver.h
firmware/drivers/pico/i2c/src/: pico_i2c_driver.cpp
firmware/helpers/: from_array_16.py  from_array_8.py  pyfont.py  to_array.py
firmware/inc/: defs.hpp  flow_selector.hpp  i2c_worker.hpp  keycodes.hpp  keypad.hpp  led.hpp  types.h  usb_manager.hpp
firmware/lib/: CMakeLists.txt
firmware/lib/communication/: CMakeLists.txt
firmware/lib/communication/inc/communication/: communication.hpp
firmware/lib/communication/src/: communication.cpp
firmware/lib/crc/: CMakeLists.txt
firmware/lib/crc/inc/crc/: crc.hpp
firmware/lib/crc/src/: crc.cpp
firmware/lib/defs/: CMakeLists.txt
firmware/lib/defs/inc/defs/: base.hpp  defs.hpp
firmware/lib/defs/left/defs/: defs.hpp
firmware/lib/defs/right/defs/: defs.hpp
firmware/lib/keypad/: CMakeLists.txt
firmware/lib/keypad/inc/keypad/: keypad.hpp
firmware/lib/keypad/src/: keypad.cpp
firmware/lib/logger/: CMakeLists.txt
firmware/lib/logger/inc/logger/: logger.hpp
firmware/lib/logger/src/: logger.cpp
firmware/lib/queue/inc/queue/: queue.hpp
firmware/lib/queue/src/: queue.cpp
firmware/lib/ssd1306/: CMakeLists.txt
firmware/lib/ssd1306/inc/: font.h  font.hpp  ssd1306.h
firmware/lib/ssd1306/src/: ssd1306.cpp
firmware/lib/tinyusb/: CMakeLists.txt
firmware/lib/tinyusb/inc/: hid_keycodes.hpp  tinyusb.hpp  tusb_config.h
firmware/lib/tinyusb/src/: tinyusb.cpp  tinyusb_cb.c  usb_descriptors.c
firmware/src/: flow_selector.cpp  i2c_worker.cpp  keypad.cpp  led.cpp  logger.cpp  main.cpp  usb_manager.cpp
